--- a/net/templates/wall_widget.html
+++ b/net/templates/wall_widget.html
@@ -25,7 +25,7 @@
 	{% ifequal profile.user.pk request.user.pk %}
 	<h1 class="header">{% trans "Стена пуста" %}</h1>
 	<p class="wrote-smth wrote-smth-btn"п>
-	    <a href="{% url user_search %}">Найдите друзей, и они вам что-нибудь напишут</a> 
+	    <a href="{% url user_search %}">{% trans "Найдите друзей, и они вам что-нибудь напишут" %}</a> 
 	    или  
 	    <a href="{% url create_pm profile.pk %}" >
 	    {% trans "попробуйте сами" %}
