--- a/photo/templates/photo_create.html
+++ b/photo/templates/photo_create.html
@@ -7,13 +7,13 @@
                             <form enctype="multipart/form-data" method="post" action="{% url create_photo  %}">
                                 <div class="b-fields-group main-fields">
                                         {% if album_form.fields.album.choices %} 
-                                            выберите альбом или группу {{ album_form.album }} или 
-                                        {% endif %} создайте новый альбом:
+                                            {% trans "выберите альбом или группу" %} {{ album_form.album }} или 
+                                        {% endif %} {% trans "создайте новый альбом:" %}
                                         <fieldset>
                                             {{ album_form.title }}
                                         </fieldset>
                                         {{ photo_forms.management_form.as_table }}
-										<fieldset>выберите фотографии:</fieldset>
+										<fieldset>{% trans "выберите фотографии:" %}</fieldset>
                                         {% for form in photo_forms.forms %}
 											<fieldset>
                                             {{ form.image }}
@@ -21,7 +21,7 @@
                                         {% endfor %}
                                    
                 
-                                    <input style="margin-top: 10px" type="submit" value="Загрузить"/>
+                                    <input style="margin-top: 10px" type="submit" value="{% trans "Загрузить" %}"/>
                                 </div>
                             </form>
                         </div>
