--- a/net/templates/registration/activation.html
+++ b/net/templates/registration/activation.html
@@ -37,8 +37,8 @@
                 <form class="b-signup-form" action="{% url registration_register %}" method="post">
                 <h3 class="header">Зарегистрироваться:</h3>
                 <fieldset>{{ form.as_p }}</fieldset>
-                 <input type="submit" value="Зарегистрироваться" class="signin-btn"/>
-                <p class="notation">Мы бережно храним ваш email в соответствии с &laquo;<a href="#">Условиями о хранении персональной информации</a>&raquo;</p>
+                 <input type="submit" value="{% trans "Зарегистрироваться" %}" class="signin-btn"/>
+                <p class="notation">{% blocktrans %}Мы бережно храним ваш email в соответствии с &laquo;<a href="#">Условиями о хранении персональной информации</a>&raquo; {% endblocktrans %}</p>
                 </form>
             </div>
             <form class="b-registration-form" action="{% url auth_login %}" method="post">
