--- a/net/templates/edit_place.html
+++ b/net/templates/edit_place.html
@@ -6,9 +6,11 @@
             <form action="." method="post" enctype="multipart/form-data">
                 <div class="b-fields-group main-fields">
                     {{ form.as_p }}
+<!-- 
+В title засовывается собственно оно из /places/template/?q=АБЫР
+-->
 <p>    <input type="submit" value="{% trans "Save" %}"/></p>
                 </div>
-
             </form>
 	
     </div>
