--- a/net/templates/profile_include.html
+++ b/net/templates/profile_include.html
@@ -44,7 +44,7 @@
                                             <ul> 
                                             {% for place in profile.places.all %}
                                                 <li>
-                                                    {{ place.type }} <a href="{% url user_search %}?places__name={{ place.name|urlencode }}">{{ place.name }}</a>
+                                                    {{ place.template.type }} <a href="{% url user_search %}?places__template__translations__name={{ place.template.name|urlencode }}">{{ place.template.name }}</a>
                                                     с: {{ place.from_date|date:"m.Y" }} по: {{ place.to_date|date:"m.Y" }} 
                                                     {% ifequal profile request.user.user %}
                                                         <a href="{% url edit_user_place place.pk %}">{% trans "edit" %}</a>
