--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -43,7 +43,7 @@
 					$('body').append(data);
 					$('#write-smth').dialog({
 						width: 450, 
-						height: 240, 
+						height:	$('#write-smth').height(), 
 						modal: true, 
 						overlay: { 
 							opacity: 0.5, 
