--- a/net/templates/wall_create.html
+++ b/net/templates/wall_create.html
@@ -3,8 +3,8 @@
 {% load i18n thumbnail %}
 
      
-                        <div class="b-message-form" id="write-smth">
-                            <h1>
+                        <div class="b-message-form" style="height: 250px" id="write-smth">
+                            <h1 style="padding-bottom: 10px">
                                 {% if request.GET.private %}
                                     {% trans "Личное сообщение" %}
                                 {% else %}
