--- a/net/templates/wall_widget.html
+++ b/net/templates/wall_widget.html
@@ -24,10 +24,10 @@
 	{% else %}
 	{% ifequal profile.user.pk request.user.pk %}
 	<h1 class="header">{% trans "Стена пуста" %}</h1>
-	<p class="wrote-smth wrote-smth-btn"п>
+	<p class="wrote-smth-btn">
 	    <a href="{% url user_search %}">{% trans "Найдите друзей, и они вам что-нибудь напишут" %}</a> 
 	    или  
-	    <a href="{% url create_pm profile.pk %}" >
+	    <a  href="{% url create_pm profile.pk %}" class="wrote-smth">
 	    {% trans "попробуйте сами" %}
         </a>
     </p>
