--- a/blog/templates/post_add.html
+++ b/blog/templates/post_add.html
@@ -3,7 +3,7 @@
             {% block content %}
                 <div class="b-place-form" style="height: 400px" id="write-smth">
                         <h1>{% trans "Добавить пост" %}</h1>
-                        <form method="post" action="{% url post_add  %}">
+                        <form method="post" action="{% url post_add type %}">
                             {{ form.as_p }}
                             <input type="submit" value="{% trans "Cоздать" %}"/>
                         </form>
