--- a/net/templates/blog_widget.html
+++ b/net/templates/blog_widget.html
@@ -10,7 +10,7 @@
 	</div>	
 	{% endfor %}
     <div class="b-do-bar">
-		<a href="{% url post_add %}"   class="wrote-smth wrote-smth-btn">{% trans "Написать" %}</a>
+		<a href="{% url post_add "blog" %}"   class="wrote-smth wrote-smth-btn">{% trans "Написать" %}</a>
 
     {% if widgets.blog.posts_count %}
 	    <a href="{% url post_list %}">
