--- a/net/templates/groups.html
+++ b/net/templates/groups.html
@@ -16,6 +16,7 @@
         </ul>
         <div class="clear">
             <a href="{% url groups_create %}">{% trans "Создать группу" %}</a>
+            <a href="{% url my_groups_list %}">{% trans "Мои группы" %}</a>
         </div>
                             
         {% include "paginator.html" %}
