--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -6,31 +6,30 @@
             {% endblock profile %}
             {% block content %}
 
-	{% ifequal request.session.django_language 'ru' %}
-                <div class="b-left-column">
-                    {% include "messages_widget.html" %}
-                    {% include "wall_widget.html" %}
-                    {% include "ads_widget.html" %}			
-                 
-                </div>
-                <div class="b-right-column">
-                    {% include "friends_widget.html" %}
-                    {% include "photos_widget.html" %}
-                    {% include "blog_widget.html" %}
-                    {% include "events_widget.html" %}
-                </div>
-{% else %}
- <div class="b-right-column">
+{% ifequal request.session.django_language 'ar' %}
+    <div class="b-right-column">
         {% include "friends_widget.html" %}
         {% include "photos_widget.html" %}
         {% include "blog_widget.html" %}
         {% include "events_widget.html" %}
     </div>
-	     <div class="b-left-column">
-                {% include "messages_widget.html" %}
-                {% include "wall_widget.html" %}
-                {% include "ads_widget.html" %}			
-             
-            </div>
-				{% endifequal %}
+    <div class="b-left-column">
+        {% include "messages_widget.html" %}
+        {% include "wall_widget.html" %}
+        {% include "ads_widget.html" %}			
+    </div>
+{% else %}
+    <div class="b-left-column">
+        {% include "messages_widget.html" %}
+        {% include "wall_widget.html" %}
+        {% include "ads_widget.html" %}			
+     
+    </div>
+    <div class="b-right-column">
+        {% include "friends_widget.html" %}
+        {% include "photos_widget.html" %}
+        {% include "blog_widget.html" %}
+        {% include "events_widget.html" %}
+    </div>
+    {% endifequal %}
             {% endblock content %}
