добавил группу, пофиксил баги

--- a/net/templates/group_create.html
+++ b/net/templates/group_create.html
@@ -1,13 +1,12 @@
-{% extends "base.html" %}
 {% load i18n thumbnail %}
-            {% block content %}
-                <div class="b-form-container">
-                        <div class="b-signup">
-                            <h1>{% trans "Новая группа" %}</h1>
-                            <form action="{% url groups_create %}" method="post">
-                                {{ form.as_p }}
-                                <input type="submit" value="{% trans "send" %}"/>
-                            </form>
-                        </div>
-                    </div>
-            {% endblock content %}
+   {% block content %}
+    <div class="b-place-form"  id="write-smth" style="height: 320px;" class="b-form-container">
+       
+            <h1>{% trans "Новая группа" %}</h1>
+            <form action="{% url groups_create %}" method="post">
+                {{ form.as_p }}
+                <input type="submit" value="{% trans "send" %}"/>
+            </form>
+
+    </div>
+{% endblock content %}
