--- a/net/templates/group.html
+++ b/net/templates/group.html
@@ -5,6 +5,14 @@
         {% ifin request.user.user object.members.all %}
             {% trans "Вы участник этой группы" %}
             <a href="{% url groups_enter object.pk "0" %}">{% trans "Покинуть группу" %}</a>
+            <form action="{% url groups_invite object.pk %}" method="post">
+                <select name="user">
+                {% for f in request.user.user.friends.all %}
+                    <option value="{{ f.friend.pk }}">{{ f.friend.get_name }}</option>
+                {% endfor %}
+                </select>
+                <input type="submit" value="{% trans "Пригласить" %}" />
+            </form>
         {% else %}
             <a href="{% url groups_enter object.pk "1" %}">{% trans "Вступить в группу" %}</a>
         {% endifin %}
