my groups list by default

--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -80,7 +80,7 @@
 				<a href="{% url user_profile request.user.user.pk %}">{% trans "Я" %}</a>
 				    <a href="{% url my_profile %}">{% trans "Люди" %}</a> 
 			
-				<a href="{% url groups_list %}">{% trans "Группы" %}</a> 
+				<a href="{% url my_groups_list %}">{% trans "Группы" %}</a> 
 					{% endif %}
 				<a href="#">RTTV</a>
 				</div>
