--- a/net/templates/events_widget.html
+++ b/net/templates/events_widget.html
@@ -17,7 +17,7 @@
         <p>
         {% autoescape off %}    
             {% method msg get_body request.user %}
-        {% endautoescape off %}    
+        {% endautoescape %}    
         </p>
     </div>
     {% endfor %}
