--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -65,6 +65,18 @@
 					$.post('/i18n/setlang/', {'language': $(_t).attr('rel')}, function(){window.location.reload()});
 					return false;
 				});
+				
+				$('#id_country').change(function(){
+					$.getJSON('/cities/' + $(this).val() + '/', function(data){
+						$('#id_city').empty();
+						options = '';
+						$(data).each(function(){
+							options += '<option value="' + this.id + '">' + this.name + '</option>'
+						});
+						$('#id_city').append(options)
+					});
+				});
+				
 		});
 
 		 
