--- a/net/templates/users.html
+++ b/net/templates/users.html
@@ -8,7 +8,7 @@
 			<div class="corner-left bottom"></div>
 			<div class="corner-right bottom"></div>
 			<div class="b-users-list">
-						{% if objects_list %}
+						{% if object_list %}
         {% for user in object_list %}
             	<div class="b-user"><a class="medium-avatar"  href="{% url user_profile user.pk %}">
             	    <img src="{% thumbnail user.avatar 100x100 %}" /></a>
@@ -38,8 +38,20 @@
 		  {% include "events_widget.html" %}
 	</div>
         <div class="clear"></div>
-	{% if objects_list %}
+	{% if object_list %}
  {% include "paginator.html" %}
 {% endif %}
     {% endblock content %}
   
+    {% block profile %}
+<table class="b-personal-info">
+    <tr>
+        <td>
+            <form action="{% url user_search %}" method="post">
+                {{ form.as_fs }}
+                <input type="submit"/>
+            </form>
+        </td>
+    </tr>
+</table>
+    {% endblock profile %}
