мелочи верстки, верстка поиска и прочего

--- a/contrib/django-authopenid-0.9.4/django_authopenid/templates/authopenid/settings.html
+++ b/contrib/django-authopenid-0.9.4/django_authopenid/templates/authopenid/settings.html
@@ -4,7 +4,7 @@
 {% block head %}
 <style type="text/css" media="screen">
 	dt, dd { padding:0 0 0.35em 0; }
-	dt { float: left; width: 21ex;  }
+	dt { float: left; display: inline; width: 21ex;  }
 	dd { margin-left: 23ex;  }
 	
 	#settings-options, #settings-intro { padding: 4em 1.5em;}
