--- a/net/templates/profile_include.html
+++ b/net/templates/profile_include.html
@@ -3,7 +3,7 @@
                 <table class="b-personal-info">
                     <tr>
                         <td class="b-userpic">
-                            {% if profile.avatar %} <img src="{% thumbnail profile.avatar 270x270 %}" /> {% endif %}
+                            {% if profile.avatar %} <img src="{% thumbnail profile.avatar 270x270 %}" alt="userpic" /> {% endif %}
                         </td>
                         <td>
                             {% ifequal profile.pk request.user.user.pk %}
@@ -77,7 +77,7 @@
                                     </div>
                                     
                                 </div>
-                            </div>
+                     
                         </td>
                     </tr>
                 </table>
