--- a/media/css/ru/head.css
+++ b/media/css/ru/head.css
@@ -30,7 +30,7 @@
 
 .b-head-right {
     margin-top: -30px;
-    float: left;
+    float: left; display: inline;
     width: 100%;
 }
 .b-head-right .b-logout-btn {
