--- a/media/css/ru/personal_info.css
+++ b/media/css/ru/personal_info.css
@@ -9,8 +9,8 @@
    width: 282px;
     padding: 20px 30px 20px 20px;
     text-align: center;
-    color: ;
-    background: url('/i/img/avatar_bg.jpg');
+
+    background: url('/i/img/avatar_bg.jpg') top left no-repeat;
 }
 
 .username { 
