--- a/media/css/ru/registration.css
+++ b/media/css/ru/registration.css
@@ -1,5 +1,5 @@
 .b-form-container {
-float: left; display: inline;
+float: left; display: inline; display: inline;
 width: 100%;
 overflow: hidden;
 background: #fff;
@@ -10,13 +10,13 @@ padding-bottom: 20px;
 
 
   .b-registration {
-float: left; display: inline;
+float: left; display: inline; display: inline;
 margin: 135px 0 0 0px;
 padding: 0 50%;
 }
   .b-registration-info {
 width: 310px;
-float: left; display: inline;
+float: left; display: inline; display: inline;
 padding-right: 50px;
 border-right: solid 1px #e2e2e2;
 margin-left: -362px;
@@ -31,7 +31,7 @@ margin-left: -362px;
 
 
 .b-signup {
-    float: left; display: inline;
+    float: left; display: inline; display: inline;
     width: 600px;
 
     margin: 55px 0 0 0px;
@@ -40,10 +40,10 @@ margin-left: -362px;
 } 
 
 .b-signup input, select .b-signup{
-float: left;
+float: left; display: inline;
 }
 .b-signup label {
-    float: left; display: inline;
+    float: left; display: inline; display: inline;
     text-align: right;
     width: 150px;
     margin-top: 1px;
@@ -52,22 +52,22 @@ float: left;
 }
 
 .b-registration-form {
-    float: left; display: inline;
+    float: left; display: inline; display: inline;
     width: 310px;
     margin-left: 50px;
   
 }
 .b-login-form {
                                   
-    float: left;
+    float: left; display: inline;
     display: inline;
 }
 .b-registration-form input {
-float: left;
+float: left; display: inline;
 }
   
   .b-registration-form label {
-float: left; display: inline;
+float: left; display: inline; display: inline;
 text-align: right;
 width: 50px;
 
@@ -77,7 +77,7 @@ padding-right: 5px;
 
 }
               .b-registration-form fieldset, .b-signup  fieldset {
-float: left; display: inline;
+float: left; display: inline; display: inline;
 
 margin-top: 15px;
 width: 100%;
@@ -110,7 +110,7 @@ margin: 10px 0 0 5px;
 }
 
 .b-fields-group {
-    float: left;
+    float: left; display: inline;
     margin-bottom: 20px;
 }
 .b-signup .signup-btn {
